--- a/cultivation-arts/qigong/index.html
+++ b/cultivation-arts/qigong/index.html
@@ -232,6 +232,30 @@
 </ul>
 </li>
 </ul>
+<h2 id="breathing">Breathing</h2>
+<ul>
+<li>Reverse abdominal breathing
+<ul>
+<li>What should happen to chest cavity?
+<ul>
+<li>I assume it should grow much in volume.</li>
+</ul>
+</li>
+<li>What exactly happens in the abdomen? Which part is moving in or contacting up? What references points do we have?
+<ul>
+<li>Need to tuck in butt (rotate butt downwards). Pull in the dantian (below the navel).</li>
+</ul>
+</li>
+<li>Videos
+<ul>
+<li><a href="https://www.youtube.com/watch?v=unG5jJy6fyo">Practice Abdominal Breathing by Mantak Chia</a></li>
+<li><a href="https://www.youtube.com/watch?v=kMwUqCufhOU">Reverse Breathing &ndash; Mingmen/Dantian</a></li>
+<li><a href="https://www.youtube.com/watch?v=8zLwuA3VR8o">Dantian Pull-In/Push Out &ldquo;Breathing w/o Breathing&rdquo; from Master Jou Lineage</a></li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
 <h2 id="八段锦-bāduànjǐn-eight-brocade-exercise">八段锦 (Bāduànjǐn, Eight Brocade Exercise)</h2>
 <h3 id="站式-zhànshì">站式 (zhànshì)</h3>
 <ul>
