--- a/cultivation-arts/journal/index.html
+++ b/cultivation-arts/journal/index.html
@@ -2017,7 +2017,13 @@
 <ul>
 <li>Rest of oat groats, rice, lentils, veggies</li>
 </ul>
-</div>
+<h1 id="2020-08-06">2020-08-06</h1>
+<h2 id="distractions">Distractions</h2>
+<ul>
+<li>What is it that prevents me from remaining in a calm and quiet atmosphere?</li>
+<li>What is it that triggers a desire to watch movies/anime?</li>
+</ul>
+
   </main>
 
           <footer role="contentinfo">
