--- a/cultivation-arts/qigong/index.html
+++ b/cultivation-arts/qigong/index.html
@@ -190,7 +190,8 @@
           
   <main id="main">
     <h1>Qigong (氣功)</h1>
-    <p>Qigong has been shown to have benefits related to many bodily functions. Heart-brain-breathing interactions research has shown evidence for the benefits of meditation and qigong type activities. Key ideas</p>
+    <h2 id="overview">Overview</h2>
+<p>Qigong has been shown to have benefits related to many bodily functions. Heart-brain-breathing interactions research has shown evidence for the benefits of meditation and qigong type activities. Key ideas</p>
 <ul>
 <li>Meditation and qigong breathing increases heart variability</li>
 <li>Resonant breath biofeedback
@@ -206,6 +207,12 @@
 </li>
 </ul>
 </li>
+</ul>
+<h2 id="types">Types</h2>
+<ul>
+<li><a href="#八段锦-bāduànjǐn-eight-brocade-exercise">八段錦 (Bāduànjǐn, Eight Brocade Exercise)</a></li>
+<li><a href="#yijin-jing-易筋經">易筋經 (Yìjīnjīng, Tendon Changing Classic)</a></li>
+<li>混元氣功 (Hùnyuán Qìgōng, Origin Qigong)</li>
 </ul>
 <h2 id="research">Research</h2>
 <h3 id="qigong">Qigong</h3>
@@ -236,14 +243,15 @@
 <ul>
 <li>Reverse abdominal breathing
 <ul>
+<li>Easiest position is Wuji (無極). Rotate pelvis back and let knee follow, bending slightly.</li>
 <li>What should happen to chest cavity?
 <ul>
-<li>I assume it should grow much in volume.</li>
+<li>I assume it shouldn&rsquo;t grow much in volume.</li>
 </ul>
 </li>
 <li>What exactly happens in the abdomen? Which part is moving in or contacting up? What references points do we have?
 <ul>
-<li>Need to tuck in butt (rotate butt downwards). Pull in the dantian (below the navel).</li>
+<li>Pull in the dantian (below the navel).</li>
 </ul>
 </li>
 <li>Videos
@@ -354,8 +362,7 @@
 </ul>
 </li>
 </ul>
-<h2 id="my-understandings">My Understandings</h2>
-<h3 id="yijin-jing-易筋经">Yijin Jing (易筋经)</h3>
+<h2 id="yijin-jing-易筋經">Yijin Jing (易筋經)</h2>
 <ul>
 <li>According to Damo Mitchell<a href="#fn1"><sup>1</sup></a>
 <ul>
