--- a/cultivation-arts/qigong/index.html
+++ b/cultivation-arts/qigong/index.html
@@ -239,6 +239,24 @@
 </ul>
 </li>
 </ul>
+<h2 id="qi">Qi</h2>
+<ul>
+<li>Q: Is Qi related to Dantian? (Jarek Szymanski)
+<ul>
+<li>A: Dantian is closely related to movements of the waist. In microscale it is the center of the body - point between belly button and Mingmen, where Qi originates from. In macroscale it covers whole body. In order to develop Dantian one should start from standing exercises and collect and nourish Qi - first focus Intention on the center of the body. Once the Qi in the body becomes abundant, one feels warm and movement inside. Then Dantian breathing should be used to induce the outside movement of the body with internal movement. When Intention and Qi are coordinated, Dantian turns and Qi flows freely in the whole body. All parts of the body move in a round way. This is Hunyuan. (Feng Zhiqiang 冯志强) (<a href="http://www.kokolia.cz/taiji/taijiGenealogie/Feng_Zhiqiang.html">http://www.kokolia.cz/taiji/taijiGenealogie/Feng_Zhiqiang.html</a>)</li>
+</ul>
+</li>
+<li>Q: &ldquo;Hunyuan&rdquo; seems to be very important idea as you decided to add it to the name of your system&hellip; (Jarek Szymanski)
+<ul>
+<li>A: Heaven and Earth are continuously revolving, stars, the Sun, all of the heavenly bodies spin and rotate. This round, circular, coordinated movement is called &ldquo;Hunyuan&rdquo;. This movement should also be reflected in martial arts practice. I learnt many martial arts and walked a very crooked path before I understood the core of Neijia arts. I want to show other people a straight, direct path to achieve high skill. For this reason I emphasize &ldquo;Hunyuan&rdquo; and the function of Xinyi (Mind and Intention). (Feng Zhiqiang 冯志强) (<a href="http://www.kokolia.cz/taiji/taijiGenealogie/Feng_Zhiqiang.html">http://www.kokolia.cz/taiji/taijiGenealogie/Feng_Zhiqiang.html</a>)</li>
+</ul>
+</li>
+<li>Q: Is Dantian movement usefull in fighting? (Jarek Szymanski)
+<ul>
+<li>A: The body moves as a cordinated whole because of Dantian movement. While issuing power (Fa Li) Dantian turns and the whole body power is focused in one point. In this way the power issued can penetrate the bones of the opponent. While issuing power the body should be relaxed, but one should be very conscious about so-called &ldquo;Shaking Power&rdquo; (Dou Jin). This power has to be focused and not scattered all over the body. The more advanced one is, the smaller the shaking. When we were learning Taijiquan from Chen Fake shaking the body in Fa Li was the greatest taboo to be avoided. (Feng Zhiqiang 冯志强) (<a href="http://www.kokolia.cz/taiji/taijiGenealogie/Feng_Zhiqiang.html">http://www.kokolia.cz/taiji/taijiGenealogie/Feng_Zhiqiang.html</a>)</li>
+</ul>
+</li>
+</ul>
 <h2 id="breathing">Breathing</h2>
 <ul>
 <li>Reverse abdominal breathing
