--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   
   <link rel="stylesheet" type="text/css" href="https://petevieira.github.io/css/styles.css">
 
-  
+  <link rel="stylesheet" href="https://petevieira.github.io/css/custom.css">
 
   <style id="inverter" media="none">
     .intro-and-nav, .main-and-footer { filter: invert(100%) }
