--- a/index.html
+++ b/index.html
@@ -215,6 +215,12 @@
         <ul class="mt0">
           
           <li style="margin-left: 1.5rem;">
+            <a href="https://petevieira.github.io/linguistics/phonology/">
+              Phonology
+            </a>
+          </li>
+          
+          <li style="margin-left: 1.5rem;">
             <a href="https://petevieira.github.io/linguistics/syntax/">
               Syntax
             </a>
