--- a/index.html
+++ b/index.html
@@ -179,6 +179,12 @@
           </li>
           
           <li style="margin-left: 1.5rem;">
+            <a href="https://petevieira.github.io/cultivation-arts/my-path/">
+              My Path
+            </a>
+          </li>
+          
+          <li style="margin-left: 1.5rem;">
             <a href="https://petevieira.github.io/cultivation-arts/qigong/">
               Qigong (氣功)
             </a>
