--- a/index.html
+++ b/index.html
@@ -209,6 +209,12 @@
           </li>
           
           <li style="margin-left: 1.5rem;">
+            <a href="https://petevieira.github.io/cultivation-arts/wushu/">
+              Wushu (武术)
+            </a>
+          </li>
+          
+          <li style="margin-left: 1.5rem;">
             <a href="https://petevieira.github.io/cultivation-arts/yoga/">
               Yoga (योग)
             </a>
